--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 
     <div class="botoes">
         <div class="container">
-            <a href="#" class="btn">Botão Simples</a>
+            <a href="#" class="btn">Olá, Mundo!</a>
+        </div>
+
+        <div class="container hover">
+            <a href="#" class="btn">Olá, Mundo!</a>
+        </div>
+
+        <div class="container bg">
+            <a href="#" class="btn">Olá, Mundo!</a>
+        </div>
+
+        <div class="container bg-1">
+            <a href="#" class="btn">Olá, Mundo!</a>
+        </div>
+
+        <div class="container bg-2">
+            <a href="#" class="btn">Olá, Mundo!</a>
         </div>
     </div>
     
