criando novos botões

--- a/index.html
+++ b/index.html
@@ -8,26 +8,14 @@
 </head>
 <body>
 
-    <div class="botoes">
-        <div class="container">
-            <a href="#" class="btn">Olá, Mundo!</a>
-        </div>
+    <div class="container">
 
-        <div class="container hover">
-            <a href="#" class="btn">Olá, Mundo!</a>
-        </div>
+        <a href="" class="btn-1">Button</a>
 
-        <div class="container bg">
-            <a href="#" class="btn">Olá, Mundo!</a>
-        </div>
+        <a href="" class="btn-2">Button</a>
 
-        <div class="container bg-1">
-            <a href="#" class="btn">Olá, Mundo!</a>
-        </div>
-
-        <div class="container bg-2">
-            <a href="#" class="btn">Olá, Mundo!</a>
-        </div>
+        <a href="" class="btn-3">Button</a>
+    
     </div>
     
 </body>
