adicionando botões parte 2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         <a href="" class="btn-2">Button</a>
 
         <a href="" class="btn-3">Button</a>
+
+        <a href="" class="btn-4">Button</a>
+
+        <a href="" class="btn-5">Button</a>
+
+        <a href="" class="btn-6">Button</a>
+
+        <a href="" class="btn-7">Button</a>
+
+        <a class="btn-8" href="#">
+            <span class="top"></span>
+            <span class="text">Button</span>
+            <span class="bottom-key-1"></span>
+            <span class="bottom-key-2"></span>
+          </a>
     
     </div>
     
